--- a/Test4/Test4.vcxproj
+++ b/Test4/Test4.vcxproj
@@ -121,6 +121,12 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>copy /Y testTexture.png $(outdir)
+copy /Y d2d_image.jpg $(outdir)
+copy /Y shaders.hlsl $(outdir)
+</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
